# agentic-api-assistant

./: README.md  main.py  pyproject.toml  requirements.txt
assets/: Quick Wins – Email Change Api Documentation.docx
document_extract/: docx_reader.py  extractor.py  models.py  pdf_reader.py  txt_reader.py
notebooks/: 01_ingestion.ipynb
test/: test-01.ipynb
