[project]
name = "agentic-api-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docx>=0.2.4",
    "fastapi==0.115.0",
    "fitz>=0.0.1.dev2",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.30.6",
]
